[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/first_party/assets/basic_2d_assets/polygons/square/square_filled.png" type="Texture" id=2]
[ext_resource path="res://addons/first_party/assets/basic_2d_assets/polygons/circle/circle_filled.png" type="Texture" id=4]
[ext_resource path="res://game/fx/cool_explosion.gd" type="Script" id=5]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.0373281, 0.0884086 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.802061, 0.547569, 1, 1, 0.619608, 0.12549, 0 )

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.491723 ), 0.0, 0.0, 0, 0, Vector2( 0.0843806, 0.594707 ), 0.0, 0.0, 0, 0, Vector2( 0.831239, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0196464, 0.117878, 0.591356 )
colors = PoolColorArray( 0.873369, 0.746793, 0.541009, 1, 0.179013, 0.114296, 0.114296, 1, 0.176471, 0.160784, 0.113725, 0 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.491723 ), 0.0, 0.0, 0, 0, Vector2( 0.0933573, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.50472, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.046252, 0.114833, 0.185008, 0.247209, 0.393939, 0.591356 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.0338266, 0.0338266, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0.64888, 0.642192, 0.622128, 0.417696, 0.176471, 0.160784, 0.113725, 0 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ null, null, null, null ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="CoolExplosion" type="Node2D"]
script = ExtResource( 5 )

[node name="debris" type="CPUParticles2D" parent="."]
visible = false
amount = 32
explosiveness = 1.0
randomness = 0.02
lifetime_randomness = 0.45
texture = ExtResource( 2 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 3000.0
initial_velocity_random = 0.3
angle_random = 1.0
scale_amount = 0.1
color_ramp = SubResource( 3 )

[node name="broad_smoke" type="CPUParticles2D" parent="."]
scale = Vector2( 3, 3 )
z_as_relative = false
amount = 32
lifetime = 5.0
explosiveness = 0.99
randomness = 0.02
lifetime_randomness = 0.45
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.3
damping = 10.0
angle_random = 1.0
scale_amount = 0.01
scale_amount_random = 0.3
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="central_smoke" type="CPUParticles2D" parent="."]
scale = Vector2( 3, 3 )
z_index = 1
lifetime = 0.7
explosiveness = 0.99
randomness = 0.02
lifetime_randomness = 0.45
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.3
damping = 40.0
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.4
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 5 )

[node name="flash" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 3
frames = SubResource( 4 )
speed_scale = 2.0
